Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42022

REG: Animated growing BorderImage broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0 RC
    • 5.4.0 Beta
    • Quick: Other
    • None
    • 87755d0437413cfb875c50e3dfa53030601567c9

      When animating a border image's width from 0 to <some big size> there will be a portion of the animation where part of the image is not showing. This is a regression in the new BorderImage implementation.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes